deploy/k8s/netci-platform/12-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netci-worker
  namespace: netci
  labels:
    app.kubernetes.io/name: netci-worker
    app.kubernetes.io/part-of: netci-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: netci-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: netci-worker
        app.kubernetes.io/part-of: netci-platform
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      containers:
        - name: worker
          image: harbor.vtnet.viettel.vn/netci/worker:1.0.0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
