deploy/k8s/netci-platform/20-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netci-ingress
  namespace: netci
  labels:
    app.kubernetes.io/name: netci-ingress
    app.kubernetes.io/part-of: netci-platform
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "128m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: netci.vtnet.viettel.vn
      http:
        paths:
          # Backend API, Docs and OpenAPI specs
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: netci-backend
                port:
                  number: 8000
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: netci-backend
                port:
                  number: 8000
          - path: /openapi.json
            pathType: Exact
            backend:
              service:
                name: netci-backend
                port:
                  number: 8000
          - path: /metrics
            pathType: Exact
            backend:
              service:
                name: netci-backend
                port:
                  number: 8000
          # Frontend Single Page App (Web Portal)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netci-frontend
                port:
                  number: 80
